[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://xolonium.tres" type="DynamicFont" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel1" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_right = -225.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="ScoreLabel2" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 225.0
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "0"
align = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.50732
margin_top = -95.0
margin_right = -1.50732
margin_bottom = 7.0
custom_fonts/font = ExtResource( 2 )
text = "Phyong! "
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -95.0
margin_top = -225.0
margin_right = 95.0
margin_bottom = -100.0
shortcut = SubResource( 2 )
text = "Start vs AI"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 5.0
[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
